2001-03-08  Andrew Cagney  <ac131313@redhat.com>

	* Makefile.in: Delete rules for obsolete files.

Thu Mar  8 15:43:40 2001  David Taylor  <taylor@redhat.com>

	* stack.c (parse_frame_specification): For one argument case,
 	handle the situation where the argument is an integer, not an
 	address -- arguably the most common case.  This matters on
	targets where pointers and addresses are different.

2001-03-08  Andrew Cagney  <ac131313@redhat.com>

	* TODO: Revise 5.1 list.  Delete PARAMS task.  Add coding standard
	review.  Clarify GNU/LINUX/sparc.  Move other tasks to 5.2 or
	general.

2001-03-07  Andrew Cagney  <ac131313@redhat.com>

	* TODO (GDB 5.1 Known Problems): Document problem of building GDB
	with SID on Solaris 8.

2001-03-07  Mark Kettenis  <kettenis@gnu.org>

	* defs.h: Provide prototypes for floatformat_is_negative,
	floatformat_is_nan and floatformat_mantissa.
	* utils.c: Include "gdb_assert.h".
	(floatformat_is_negative): New function.
	(floatformat_is_nan): New function.
	(floatformat_mantissa): New function.
	* valprint.c: Include "floatformat.h".
	(print_floating): Get rid of the Linux-specific
	TARGET_ANALYZE_FLOATING macro and rewrite NaN detection with the
	help these new functions.  Print NaN's in a format conforming to
	ISO C99.

2001-03-07  Eli Zaretskii  <eliz@is.elta.co.il>

	* top.c (init_main): Make `set history file name' complete on file
	names.

2001-03-06  J.T. Conklin  <jtc@redback.com>

	* Makefile.in (LINTFLAGS): Update to contain all of the macros
	which define include paths used when compiling.

	* util.c (savestring, msavestring): Change type of length argument.
	* defs.h (savestring, msavestring): Update to match.

	* symtab.h (decode_line_1): Removed declaration.

	* symfile.c (#include <assert.h>): Removed.

	* arch-utils.c (#include <ctype.h>): Removed.
	* c-typeprint.c: Likewise.
	* dbxread.c: Likewise.
	* gdbtypes.c: Likewise.
	* target.c: Likewise.
	* os9kread.c: Likewise.
