@@ -1,7 +1,7 @@
-# Host: Motorola 88k running CX/UX
-
-XM_FILE= xm-cxux.h
-XDEPFILES= 
-
-NAT_FILE= nm-cxux.h
-NATDEPFILES= infptrace.o inftarg.o fork-child.o cxux-nat.o corelow.o core-aout.o
+# OBSOLETE # Host: Motorola 88k running CX/UX
+# OBSOLETE 
+# OBSOLETE XM_FILE= xm-cxux.h
+# OBSOLETE XDEPFILES= 
+# OBSOLETE 
+# OBSOLETE NAT_FILE= nm-cxux.h
+# OBSOLETE NATDEPFILES= infptrace.o inftarg.o fork-child.o cxux-nat.o corelow.o core-aout.o
