@@ -1,3 +1,3 @@
-# Target: Motorola 88k running Harris CX/UX
-TDEPFILES= m88k-tdep.o remote-bug.o
-TM_FILE= tm-cxux.h
+# OBSOLETE # Target: Motorola 88k running Harris CX/UX
+# OBSOLETE TDEPFILES= m88k-tdep.o remote-bug.o
+# OBSOLETE TM_FILE= tm-cxux.h
